# M2-AdvancedProgramming-Project

./: .gitignore  README.md  package-lock.json
backend/: pyproject.toml
backend/project/: .ini  app.py  db.py  importAllRoutes.py
backend/project/documents/: Dockerfile  app.py  db.py  importAllRoutes.py
backend/project/documents/asbtract_document_model/: document_model.py
backend/project/documents/internship_report/models/: internship_report_model.py
backend/project/documents/internship_report/routes/: internship_report_routes.py
backend/project/internshipSpaces/: Dockerfile  app.py  app_test.py  importAllRoutes.py
backend/project/internshipSpaces/models/: internshipSpaces_model.py
backend/project/internshipSpaces/routes/: internshipSpaces_routes.py
backend/project/internships/: .ini  Dockerfile  app.py  app_test.py  importAllRoutes.py
backend/project/internships/models/: internship_model.py
backend/project/internships/routes/: internship.routes.py  internship_routes.py
backend/project/internshipsSpace/: importAllRoutes.py
backend/project/internshipsSpace/models/: internshipsSpace_model.py
backend/project/internshipsSpace/routes/: internshipsSpace_routes.py
backend/project/users/: .ini  Dockerfile  app.py  importAllRoutes.py  test_academic_tutor_app.py  test_admin_app.py  test_company_tutor_app.py  test_student_app.py
backend/project/users/abstractUserModel/: user_model.py
backend/project/users/academic_tutor/models/: academic_tutor_model.py
backend/project/users/admin/models/: admin_model.py
backend/tests/: app_test.py  db_test.py
(+55 files in other folders)
