[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["GitHermann <hermann.huang@efrei.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
